--- a/style/chat.css
+++ b/style/chat.css
@@ -24,6 +24,7 @@
 
 body, html {
     height: 100%;
+    min-height: 100vh;
     font-family: var(--font-family-default);
     background-color: var(--bg-main);
     color: var(--font-color-main);
@@ -58,7 +59,10 @@ body, html {
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    padding: 0;
+    margin: 0;
+    justify-content: center; 
+    gap: 2rem;
     flex-grow: 1;
     padding-top: 2rem;
 }
@@ -355,6 +359,23 @@ body, html {
     .chat-box {
         padding: 1rem;
     }
+
+    .ig-sidebar {
+        width: 60px;
+    }
+
+    .ig-menu li i,
+    .ig-menu li,
+    .ig-profile,
+    .ig-logo {
+        font-size: 1.3rem; 
+    }
+
+     .chat-message.self,
+    .chat-message.other {
+        max-width: 80%;
+        font-size: 0.95rem;
+    }
 }
 
 @media (max-width: 768px) {
@@ -388,18 +409,19 @@ body, html {
 @media screen and (max-width: 430px) {
   .ig-container {
     flex-direction: column;
-    height: 100dvh;
+    height: 100vh;
+    overflow-y: hidden
   }
 
   .ig-sidebar {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    height: 60px;
+    height: 45px;
     border-right: none;
     border-top: 1px solid var(--border-color);
-    padding: 0.3rem 0.5rem;
+    padding: 0;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -414,27 +436,30 @@ body, html {
 
   .ig-menu {
     flex-direction: row;
-    gap: 1rem;
+    gap: 2rem;
     padding: 0;
     margin: 0;
+    justify-content: center;
+    flex-grow: 1;
   }
 
-  .ig-contacts {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    height: 100%;
-    width: 100%;
-    background-color: var(--bg-main);
-    overflow-y: auto;
-  }
+ .ig-contacts {
+        display: flex;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        height: calc(100% - 45px); /* Beri ruang untuk footer */
+        width: 100%;
+        background-color: var(--bg-main);
+        overflow-y: auto;
+    }
 
   .ig-main {
     flex: 1;
+    width: 100%;
     height: 100%;
-    padding-bottom: 60px;
+    padding-bottom: 45px;
   }
 
   .chat-header {
@@ -473,14 +498,17 @@ body, html {
   }
 
   .chat-input-area {
+    display: flex;
+    align-items: center;
+    border-top: 1px solid var(--border-color);
     padding: 0.7rem;
-    margin-bottom: 60px;
-  }
+    background-color: var(--bg-main);
 
-  .chat-input-area input {
-    padding: 0.6rem 1rem;
-    margin: 0 6px;
-    font-size: 0.9rem;
+    position: fixed;
+        bottom: 60px; 
+        left: 0;
+        width: 100%;
+        z-index: 900;
   }
 
   .chat-input-area .icon-left,
@@ -492,20 +520,19 @@ body, html {
   .chat-header .chat-icons i {
     font-size: 1.2rem;
   }
-}
 
-@media (max-width: 430px) {
   .ig-sidebar.hidden,
   .ig-contacts.hidden {
     display: none !important;
-  }
+
 
   .ig-main.fullscreen {
-    flex: 1;
-    width: 100vw;
+    display: flex;
   }
 
   .menu-toggle {
     display: block;
   }
+}
+
 }
