--- a/style/logSignUp.css
+++ b/style/logSignUp.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 body {
-  background: url('/assets/img/login/WhiteAbstract.avif') no-repeat center center;   
+  background: url('/circlo-app/assets/img/login/WhiteAbstract.avif') no-repeat center center;   
   background-size: cover;
   font-family: "Poppins", sans-serif;
   display: flex;
@@ -50,7 +50,7 @@ body {
 
 .bag-kiri {
   flex: 1;
-  background: url('/assets/img/login/Card Background 2.avif') no-repeat center center;   
+  background: url('/circlo-app/assets/img/login/Card Background 2.avif') no-repeat center center;   
   background-size: cover;
   color: white;
   display: flex;
@@ -63,7 +63,7 @@ body {
 
 .bag-kiri.utk.signup {
 flex: 1;
-background: url('/assets/img/login/Card Background.avif') no-repeat center center;   
+background: url('/circlo-app/assets/img/login/Card Background.avif') no-repeat center center;   
 background-size: cover;
 color: white;
 display: flex;
@@ -194,7 +194,7 @@ h5 a:hover {
 }
 
 body.dark-mode {
-  background:url('/assets/img/login/purpleBackground.avif') no-repeat center center;   
+  background:url('/circlo-app/assets/img/login/purpleBackground.avif') no-repeat center center;   
   background-size: cover;
   color: #fff;
 }
@@ -242,7 +242,7 @@ body.dark-mode .theme-btn:hover {
     justify-content: center;
     text-align: center;
     padding: 20px;
-    background: url('/assets/img/login/Card Background 2.avif') no-repeat center center;
+    background: url('/circlo-app/assets/img/login/Card Background 2.avif') no-repeat center center;
   }
 
   .circlo-header {
