--- a/style/logSignUp.css
+++ b/style/logSignUp.css
@@ -89,13 +89,17 @@ text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 10px 35px;
+  padding: 40px 60px;
   text-align: center;
   background: transparent;
   box-shadow: none;
-  max-width: none;
+  width: 100%;
+  max-width: 400px; 
+  min-width: 380px; 
+  margin: 0 auto;
   border-radius: 0;
 }
+
 
 .auth-container.utk.login {
   padding: 100px 35px;
