--- a/style/chat.css
+++ b/style/chat.css
@@ -15,6 +15,22 @@
     --font-family-default: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 }
 
+body.dark-mode {
+    --bg-main: #000000e6;
+    --bg-secondary: #1a1a1a;
+    --bg-tertiary: #0a0a0a;
+    --bg-chat-other: #262626;
+    --bg-chat-self: #9333ea;
+    --border-color: #262626;
+    --font-color-main: #fff;
+    --font-color-secondary: #a8a8a8;
+    --font-color-muted: #666;
+    --input-bg: #1c1c1c;
+    --input-border: #363636;
+    --hover-bg: #444;
+    --icon-color: #a8a8a8;
+    --font-family-default: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+}
 
 * {
     margin: 0;
